[metadata]
long_description = file: readme.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development
    Topic :: Text Processing :: Markup :: HTML
    Topic :: Utilities

[options.extras_require]
selenium =
    selenium >= 3.141.0
dev =
    isort == 4.3.21
    mypy == 0.761
    pylint == 2.4.4
    yapf == 0.29.0
    pytest >= 5.1.2
    pytest-cov >= 2.7.1
    testfixtures == 6.11.0
docs =
    sphinx >= 1.8
    sphinx-autodoc-typehints == 1.8
    sphinx_rtd_theme >= 0.2.4

[yapf]
column_limit = 9999

[isort]
line_length = 9999
default_section = THIRDPARTY
known_first_party = onlinejudge

[mypy]

[mypy-appdirs.*]
ignore_missing_imports = True

[mypy-bs4.*]
ignore_missing_imports = True

[mypy-colorama.*]
ignore_missing_imports = True

[mypy-diff_match_patch.*]
ignore_missing_imports = True

[mypy-selenium.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-sympy.*]
ignore_missing_imports = True

[mypy-typing.io.*]
ignore_missing_imports = True
