[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development
    Topic :: Text Processing :: Markup :: HTML
    Topic :: Utilities

[options.extras_require]
selenium =
    selenium >= 3.141.0
dev =
    isort == 5.5.0
    mypy == 0.782
    pylint == 2.6.0
    yapf == 0.30.0
    pytest >= 5.4.2, < 6
    pytest-cov >= 2.8.1, < 3
docs =
    sphinx >= 2.4, < 3
    sphinx-autodoc-typehints >= 1.10.3, < 2
    sphinx_rtd_theme >= 0.2.4, < 1

[yapf]
column_limit = 9999

[isort]
line_length = 9999
default_section = THIRDPARTY
known_first_party = onlinejudge

[pylint]
disable = all
enable = unused-import

[mypy]

[mypy-*.*]
ignore_missing_imports = True
