[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development
    Topic :: Text Processing :: Markup :: HTML
    Topic :: Utilities

[options.extras_require]
selenium =
    selenium >= 3.141.0
dev =
    isort == 5.7.0
    mypy == 0.812
    pylint == 2.7.0
    yapf == 0.30.0
    pytest >= 6.2.2, < 7

[yapf]
column_limit = 9999

[isort]
line_length = 9999
default_section = THIRDPARTY
known_first_party = onlinejudge

[pylint]
# run: $ pylint --rcfile=setup.cfg modules_or_packages
disable =
    broad-except,
    consider-using-enumerate,
    duplicate-code,
    fixme,
    invalid-name,
    line-too-long,
    logging-not-lazy,  # TODO: remove this. logging-not-lazy should not be disabled if possible.
    missing-class-docstring,
    missing-function-docstring,
    missing-module-docstring,
    no-else-break,
    no-else-raise,
    no-else-return,
    no-member,
    no-self-use,
    redefined-builtin,
    too-few-public-methods,
    too-many-arguments,
    too-many-boolean-expressions,
    too-many-branches,
    too-many-instance-attributes,
    too-many-lines,
    too-many-locals,
    too-many-public-methods,
    too-many-return-statements,
    too-many-statements,
    unused-argument,
    unused-wildcard-import,
    wildcard-import,
    wrong-import-order,

[mypy]

[mypy-*.*]
ignore_missing_imports = True
